--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="todo_list">Todo List</string>
     <string name="search">Search for Todo items</string>
     <string name="add">ADD</string>
+    <string name="no_data_available">NoTodo List available, Please add new Todo List</string>
 </resources>
